--- a/pipelines.yml
+++ b/pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: 'ubuntu-latest'
 
 variables:
-  azureServiceConnection: 'svc-con-tt'
+  azureServiceConnection: 'svc-con-tst'
   azureResourceGroup: 'rg-devopsacademyjan2025-west-europe'
   azureStorageAccount: 'reactappstoragedoacademy'
   buildDir: 'build'
