--- a/pipelines.yml
+++ b/pipelines.yml
@@ -85,5 +85,7 @@ stages:
         scriptType: 'bash'
         scriptLocation: 'inlineScript'
         inlineScript: |
+          pwd
+          ls -ltr
           az storage blob upload-batch -d '$web' -s '$(Pipeline.Workspace)/react-app-pkg/$(buildDir)' --account-name $(azureStorageAccount)
       displayName: 'Upload React app to Azure Storage'
