--- a/pipelines.yml
+++ b/pipelines.yml
@@ -51,10 +51,9 @@ stages:
       displayName: 'Download build artifacts'
 
     - script: |
-        echo $(System.DefaultWorkingDirectory)
         mkdir -p $(System.DefaultWorkingDirectory)/react-app-pkg
-        echo $(Pipeline.Workspace)
-        cp -r $(Pipeline.Workspace)/react-app-pkg/* $(System.DefaultWorkingDirectory)/react-app-pkg/
+        echo "Copying from $(Pipeline.Workspace)/react-app-pkg/ to $(System.DefaultWorkingDirectory)/react-app-pkg/"
+        cp -rv $(Pipeline.Workspace)/react-app-pkg/* $(System.DefaultWorkingDirectory)/react-app-pkg/
       displayName: 'Copy build artifacts to working directory'  
 
     - task: TerraformTaskV4@4
